# SCT006-EIGENSOUNDS

./: .replit  README.md  app.py  audio_processor.py  linear_algebra_demos.py  pyproject.toml  replit.md  visualization.py
.streamlit/: config.toml
